2008-04-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs-util.el (cvs-map): Avoid recursion :-(

2008-04-07  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-mode-map): Replace use of kbd.

	* calendar.el (diary-view-entries-initially-flag): Rename
	view-diary-entries-initially.  Keep old name as alias, update users.
	(calendar-mark-diary-entries-flag): Rename
	mark-diary-entries-in-calendar.  Keep old name as alias, update users.
	(calendar-view-holidays-initially-flag): Rename
	view-calendar-holidays-initially.  Keep old name as alias, update users.
	(calendar-mark-holidays-flag): Rename mark-holidays-in-calendar.
	Keep old name as alias, update users.
	(calendar-initial-window-hook): Rename initial-calendar-window-hook.
	Keep old name as alias, update users.
	(calendar-today-visible-hook): Rename today-visible-calendar-hook.
	Keep old name as alias, update users.
	(calendar-today-invisible-hook): Rename today-invisible-calendar-hook.
	Keep old name as alias, update users.
	(diary-iso-date-forms): Rename iso-date-diary-pattern.  Update users.
	(diary-american-date-forms): Rename american-date-diary-pattern.
	Keep old name as alias, update users.
	(diary-european-date-forms): Rename european-date-diary-pattern.
	Keep old name as alias, update users.
	(calendar-iso-date-display-form): Rename iso-calendar-display-form.
	Keep old name as alias, update users.
	(calendar-european-date-display-form): Rename
	european-calendar-display-form.  Keep old name as alias, update users.
	(calendar-american-date-display-form): Rename
	european-calendar-display-form.  Keep old name as alias, update users.
	(diary-show-holidays-flag): Rename holidays-in-diary-buffer.
	Keep old name as alias, update users.
	(holiday-general-holidays): Rename general-holidays.
	Keep old name as alias, update users.
	(holiday-oriental-holidays): Rename oriental-holidays.
	Keep old name as alias, update users.
	(holiday-local-holidays): Rename local-holidays.